--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "mapp-api",
+  "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
-    "start": "json-server api/db.json --port 80"
+    "start": "node --env-file=.env server.js",
+    "dev": "json-server api/db.json"
   },
   "dependencies": {
     "json-server": "^0.17.0"
-  }
+  },
+  "devDependencies": {},
+  "author": "Alex I. <ailushyk@gmail.com>",
+  "license": "ISC",
+  "description": ""
 }
